src/tests/snapshots/monkey_interpreter__tests__test_let_statement_case_7_environment.snap
---
source: src/tests/mod.rs
expression: evaluator

---
Evaluator {
    environment: Environment {
        variables: {
            "is_file": True,
        },
        sub_environment: None,
    },
}
