src/tests/snapshots/monkey_interpreter__tests__test_let_statement_case_7_lexical_analysis.snap
---
source: src/tests/mod.rs
expression: tokens

---
[
    Let,
    Identifier {
        literal: "is_file",
    },
    Assign,
    True,
    SemiColon,
    EndOfFile,
]
