src/tests/snapshots/monkey_interpreter__tests__test_let_statement_case_7_syntax_analysis.snap
---
source: src/tests/mod.rs
expression: abstract_syntax_tree

---
[
    Statement {
        statement: Let {
            identifier: "is_file",
            expression: Boolean {
                boolean: True,
            },
        },
    },
]
