src/tests/snapshots/monkey_interpreter__tests__test_let_statement_case_8_lexical_analysis.snap
---
source: src/tests/mod.rs
expression: tokens

---
[
    Let,
    Identifier {
        literal: "is_directory",
    },
    Assign,
    False,
    SemiColon,
    EndOfFile,
]
