src/tests/snapshots/monkey_interpreter__tests__test_let_statement_case_8_syntax_analysis.snap
---
source: src/tests/mod.rs
expression: abstract_syntax_tree

---
[
    Statement {
        statement: Let {
            identifier: "is_directory",
            expression: Boolean {
                boolean: False,
            },
        },
    },
]
