src/tests/snapshots/monkey_interpreter__tests__test_let_statement_case_9_environment.snap
---
source: src/tests/mod.rs
expression: evaluator

---
Evaluator {
    environment: Environment {
        variables: {
            "file": String {
                value: "/tmp/temp.txt",
            },
        },
        sub_environment: None,
    },
}
