src/tests/snapshots/monkey_interpreter__tests__test_let_statement_case_9_lexical_analysis.snap
---
source: src/tests/mod.rs
expression: tokens

---
[
    Let,
    Identifier {
        literal: "file",
    },
    Assign,
    String {
        literal: "/tmp/temp.txt",
    },
    SemiColon,
    EndOfFile,
]
